# mmseg-libtorch

./: CMakeLists.txt  README.md  pytorch_result.py
include/: utils.h
src/: main.cpp  utils.cpp
